# Generated by Django 5.0.3 on 2024-11-19 23:05

from django.db import migrations


class Migration(migrations.Migration):

    dependencies = [
        ('base', '0002_pyrlclient'),
        ('invoicing', '0010_remove_invoice_company_id_invoice_client_id'),
        ('products', '0006_remove_product_company_id_and_more'),
        ('user_management', '0005_remove_pyrluser_company_and_more'),
    ]

    operations = [
        migrations.DeleteModel(
            name='company',
        ),
    ]
